--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/global/_colors.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/global/_colors.scss
@@ -62,10 +62,13 @@ $grey24: #dbdbdb;
 $grey25: #333333;
 $grey26: #3a3a3a;
 $grey27: #e0e0e0;
+$grey28: #666666;
+$grey29: #b3b3b3;
 
 $black2: #1d1d1b;
 $black3: #434343;
 $black4: #3d3d3d;
+$black5: #353535;
 
 $light-pink: #f4d1e8;
 $pale-blue: #84d8f8;
