--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -663,9 +663,48 @@
   }
 }
 .field-prgf-description {
+  article a:hover .inner-wrapper h3:after{
+    color: $blue;
+  }
+
+  .text-promo {
+    background: none;
+    box-shadow: none;
+    a{
+      color: $blue;
+    }
+    h3:hover {
+      color: $black5;
+    }
+  }
+
   .inner-wrapper {
     background: $grey20;
     box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+    margin-bottom: 30px;
+    color: $grey28;
+    .blog-heading {
+      h3 {
+        padding-left: 20px;
+        padding-right: 20px;
+        &:after {
+          margin-right: 10px;
+          margin-left: 10px;
+          width: 8%;
+          color:  $grey29;
+          content: 'o';
+          vertical-align: baseline;
+          text-align: center;
+          font-size: 24px;
+          font-family: 'YMCA';
+          -webkit-transition: color .3s ease-out;
+        }
+      }
+    }
+    &:hover {
+      color: $black5;
+    }
+
     .promo-text {
       padding-bottom: 10px;
       p {
