--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -13006,6 +13006,14 @@ body.modal-open {
   margin: 0;
 }
 
+.modal-open header#page-head {
+  display: none;
+}
+
+.modal-backdrop.in {
+  display: none;
+}
+
 .modal-content {
   box-shadow: none;
   border-radius: 9px;
