--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_modal.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_modal.scss
@@ -36,6 +36,15 @@ body.modal-open {
     margin: 0;
   }
 }
+.modal-open {
+  header#page-head {
+    display: none;
+  }
+}
+
+.modal-backdrop.in {
+  display: none;
+}
 
 .modal-content {
   box-shadow: none;
