OS-28: create block in theme rose.

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -7569,15 +7569,27 @@ article .node--view-mode-flexible-content h2 a span {
   font-size: 22px;
 }
 
-.social-post-list .header .description {
+.social-post-list {
+  /* Masonry on medium-sized screens */
+  /* Masonry on small screens */
+}
+.social-post-list .header {
+  text-align: center;
+  padding: 32px;
+}
+.social-post-list .header s
+.description {
   margin-bottom: 30px;
 }
 .social-post-list .views-element-container .row {
-  margin-bottom: 10px;
+  column-count: 3;
+  column-gap: 1em;
+  margin: 1.5em auto;
 }
-.social-post-list .views-element-container .col {
-  /*margin: 0 10px 10px 0;*/
-  background: #fff;
+.social-post-list .views-element-container .column {
+  display: inline-block;
+  margin: 0 0 1em;
+  width: 100%;
   padding: 10px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -7585,6 +7597,34 @@ article .node--view-mode-flexible-content h2 a span {
   -webkit-box-shadow: 2px 2px 5px 1px rgba(135, 135, 135, 0.43);
   -moz-box-shadow: 2px 2px 5px 1px rgba(135, 135, 135, 0.43);
   box-shadow: 2px 2px 5px 1px rgba(135, 135, 135, 0.43);
+}
+.social-post-list .views-element-container .column img {
+  width: 100%;
+}
+.social-post-list .views-element-container .column i {
+  overflow: hidden;
+  clear: both;
+  color: #50aec9;
+  font-weight: bold;
+  margin-top: 15px;
+}
+.social-post-list .views-element-container .column .posted {
+  font-size: 10px;
+}
+@media only screen and (min-width: 1024px) {
+  .social-post-list .row {
+    column-count: 3;
+  }
+}
+@media only screen and (max-width: 1023px) and (min-width: 768px) {
+  .social-post-list .row {
+    column-count: 3;
+  }
+}
+@media only screen and (max-width: 767px) and (min-width: 540px) {
+  .social-post-list .row {
+    column-count: 2;
+  }
 }
 
 .paragraph-1c-wrapper {
