--- a/themes/openy_themes/openy_lily/sass/style.scss
+++ b/themes/openy_themes/openy_lily/sass/style.scss
@@ -46,6 +46,7 @@
 @import 'modules/columns';
 @import 'modules/simple_content';
 @import 'modules/event';
+@import 'modules/social-post';
 
 // Paragraphs
 @import 'paragraphs/1c';
