--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -7569,10 +7569,6 @@ article .node--view-mode-flexible-content h2 a span {
   font-size: 22px;
 }
 
-.social-post-list {
-  /* Masonry on medium-sized screens */
-  /* Masonry on small screens */
-}
 .social-post-list .header {
   text-align: center;
   padding: 32px;
@@ -7580,14 +7576,16 @@ article .node--view-mode-flexible-content h2 a span {
 .social-post-list .header .description {
   margin-bottom: 30px;
 }
-.social-post-list .views-element-container .row {
-  column-count: 3;
+.social-post-list .views-element-container .masonry {
+  padding: 0;
+  margin: 0;
+  /*column-count: 3;
   column-gap: 1em;
-  margin: 2em auto;
+  margin: 2em auto;*/
 }
-.social-post-list .views-element-container .column {
+.social-post-list .views-element-container .masonry-item {
   display: inline-block;
-  margin: 0 3em 2em;
+  margin: 0 0 2em;
   width: 100%;
   padding: 0 0 20px 0;
   -webkit-border-radius: 5px;
@@ -7597,14 +7595,14 @@ article .node--view-mode-flexible-content h2 a span {
   -moz-box-shadow: 2px 2px 5px 1px rgba(135, 135, 135, 0.43);
   box-shadow: 2px 2px 5px 1px rgba(135, 135, 135, 0.43);
 }
-.social-post-list .views-element-container .column p, .social-post-list .views-element-container .column .link, .social-post-list .views-element-container .column .posted {
+.social-post-list .views-element-container .masonry-item p, .social-post-list .views-element-container .masonry-item .link, .social-post-list .views-element-container .masonry-item .posted {
   padding: 0 20px;
 }
-.social-post-list .views-element-container .column img {
+.social-post-list .views-element-container .masonry-item img {
   width: 100%;
   margin-bottom: 15px;
 }
-.social-post-list .views-element-container .column i {
+.social-post-list .views-element-container .masonry-item i {
   margin-left: 10px;
   overflow: hidden;
   clear: both;
@@ -7612,25 +7610,33 @@ article .node--view-mode-flexible-content h2 a span {
   font-weight: bold;
   margin-top: 15px;
 }
-.social-post-list .views-element-container .column .posted {
+.social-post-list .views-element-container .masonry-item .posted {
   font-size: 10px;
 }
-@media only screen and (min-width: 1024px) {
-  .social-post-list .row {
-    column-count: 3;
-  }
-}
-@media only screen and (max-width: 1023px) and (min-width: 768px) {
-  .social-post-list .row {
-    column-count: 3;
-  }
-}
-@media only screen and (max-width: 767px) and (min-width: 540px) {
-  .social-post-list .row {
-    column-count: 2;
-  }
-}
 
+@media (min-width: 992px) {
+  .social-post-list .masonry {
+    column-count: 3;
+    column-gap: 1em;
+    margin: 2em auto;
+  }
+}
+/* Masonry on medium-sized screens */
+@media (max-width: 1199px) and (min-width: 768px) {
+  .social-post-list .masonry {
+    column-count: 3;
+    column-gap: 1em;
+    margin: 2em auto;
+  }
+}
+/* Masonry on small screens */
+@media (max-width: 767px) and (min-width: 480px) {
+  .social-post-list .masonry {
+    column-count: 2;
+    column-gap: 0.5em;
+    margin: 0.5em auto;
+  }
+}
 .paragraph-1c-wrapper {
   padding-bottom: 30px;
 }
