--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/global/_colors.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/global/_colors.scss
@@ -64,6 +64,7 @@ $grey26: #3a3a3a;
 $grey27: #e0e0e0;
 $grey28: #666666;
 $grey29: #b3b3b3;
+$gray30: #f7f7f7;
 
 $black2: #1d1d1b;
 $black3: #434343;
@@ -103,6 +104,8 @@ $green1-lighter: #12b8a4;
 $blue-light-lighter: #19c0fc; // PMS Process Cyan C
 $blue-medium-lighter: #169bde;
 $blue-dark-lighter: #1370bd;
+$brilliant-cyan-blue: #44a1eb;
+$blue-malibu: #66afe9;
 
 // Green.
 $green-light-lighter: #37cccc;
