--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_modal.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_modal.scss
@@ -203,6 +203,7 @@ body.modal-open {
   @media screen and (max-width: 767px) {
     .modal-dialog {
       padding: 9px 28px 9px 9px;
+      margin: 0 auto;
     }
   }
 }
