--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -359,7 +359,7 @@
     -moz-transform: skew(20deg);
     -ms-transform: skew(20deg);
     transform: skew(20deg);
-    @include breakpoint(0 $tablet) {
+    @include breakpoint(0 767px) {
       display: none;
     }
   }
@@ -382,6 +382,9 @@
       }
       p {
         font-size: 24px;
+        @include breakpoint(0 767px) {
+          font-size: 16px;
+        }
         @include cachet();
       }
     }
@@ -398,7 +401,7 @@
     @include breakpoint($desktop) {
       padding-right: 100px;
     }
-    @include breakpoint(0 $tablet) {
+    @include breakpoint(0 767px) {
       background-image: none !important;
       position: static;
       width: 100%;
@@ -407,6 +410,18 @@
     figure {
       overflow: hidden;
       margin: 0 -30px 0 -20px;
+      .media--ratio {
+        height: auto;
+      }
+      .media--ratio .media__element {
+        display: block;
+        height: auto;
+        left: 0;
+        position: relative;
+        top: 0;
+        width: 100%;
+        z-index: 0;
+      }
     }
   }
 }
