--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/modules/_block-description.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/modules/_block-description.scss
@@ -36,13 +36,27 @@
         content: "\f138";
       }
     }
-    .blog-heading,
-    .promo-text {
+    .blog-up .img-crop img {
+      width: 100%;
+      height: auto;
+      max-width: inherit;
+      vertical-align: top;
+      margin: auto;
+    }
+    .blog-heading{
       padding: 0 25px 30px;
       @include breakpoint(768px) {
         padding: 0 35px 35px 45px;
       }
     }
+
+    .promo-text {
+      padding: 0 0 30px;
+      @include breakpoint(768px) {
+        padding: 0 35px 35px 0;
+      }
+    }
+
     article {
       a {
         color: $default-grey;
