Fix style for new homepage

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -10442,6 +10442,42 @@ a.sports-icon.floor-hockey {
   margin: 0;
 }
 
+.paragraph--type--featured-highlights article a:hover .inner-wrapper .blog-heading h3:after {
+  background-color: #428bca;
+}
+.paragraph--type--featured-highlights article a:hover .inner-wrapper .blog-heading p {
+  color: #333333;
+}
+.paragraph--type--featured-highlights article.featured-highlights-block a .inner-wrapper:hover {
+  background-color: #fff;
+  color: #333333;
+}
+.paragraph--type--featured-highlights article.featured-highlights-block a .inner-wrapper h3 {
+  font-weight: bold;
+  margin-top: 8px;
+  font-size: 30px;
+}
+.paragraph--type--featured-highlights article.featured-highlights-block a .inner-wrapper h3:after {
+  margin: 10px 10px 0;
+  display: inline-block;
+  color: white;
+  background: #b3b3b3;
+  content: "\f054";
+  text-align: center;
+  font-size: 24px;
+  font: normal normal normal 14px/1 FontAwesome;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  width: 21px;
+  height: 21px;
+  border-radius: 50%;
+  padding-top: 4px;
+  padding-left: 2px;
+  vertical-align: text-top;
+}
 .paragraph--type--featured-highlights article.featured-highlights-block {
   max-width: 100%;
   margin: auto;
@@ -10458,7 +10494,7 @@ a.sports-icon.floor-hockey {
   overflow: visible;
   height: auto;
   border: none !important;
-  background-color: rgba(255, 255, 255, 0.61);
+  background-color: #f1f1f1;
   position: relative;
 }
 .paragraph--type--featured-highlights article.featured-highlights-block a .inner-wrapper .blog-up {
@@ -10472,7 +10508,7 @@ a.sports-icon.floor-hockey {
   margin: auto;
 }
 .paragraph--type--featured-highlights article.featured-highlights-block a .inner-wrapper .blog-heading {
-  padding: 12px;
+  padding: 10px;
   position: static;
   height: auto;
   -webkit-transition: all 0.5s ease;
@@ -10480,7 +10516,6 @@ a.sports-icon.floor-hockey {
   -ms-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
-  background-color: #F5F5F5;
   left: 0;
   top: 0;
   width: 100%;
@@ -10520,7 +10555,6 @@ a.sports-icon.floor-hockey {
   vertical-align: text-top;
 }
 .paragraph--type--featured-highlights article.featured-highlights-block a .inner-wrapper .blog-heading p {
-  color: #635f5f;
   font-size: 14px;
   line-height: 1.62em;
 }
