--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -791,6 +791,49 @@
 }
 
 .paragraph--type--featured-highlights {
+  article a:hover .inner-wrapper .blog-heading {
+    h3:after {
+      background-color: $blue;
+    }
+    p {
+      color: $grey25;
+    }
+  }
+
+  article.featured-highlights-block a {
+    .inner-wrapper:hover {
+      background-color: $white;
+      color: $grey25;
+    }
+
+    .inner-wrapper h3 {
+      font-weight: bold;
+      margin-top: 8px;
+      font-size: 30px;
+      &:after {
+        margin: 10px 10px 0;
+        display: inline-block;
+        color: white;
+        background: $grey29;
+        content: "\f054";
+        text-align: center;
+        font-size: 24px;
+        font: normal normal normal 14px/1 FontAwesome;
+        -webkit-transition: all 0.5s ease;
+        -moz-transition: all 0.5s ease;
+        -ms-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+        width: 21px;
+        height: 21px;
+        border-radius: 50%;
+        padding-top: 4px;
+        padding-left: 2px;
+        vertical-align: text-top;
+      }
+    }
+  }
+
   article.featured-highlights-block {
     max-width: 100%;
     margin: auto;
@@ -806,7 +849,7 @@
         overflow: visible;
         height: auto;
         border: none !important;
-        background-color: rgba(255,255,255,0.61);
+        background-color: #f1f1f1;
         position: relative;
         .blog-up {
           text-align: center;
@@ -821,7 +864,7 @@
           }
         }
         .blog-heading {
-          padding: 12px;
+          padding: 10px;
           position: static;
           height: auto;
           -webkit-transition: all 0.5s ease;
@@ -829,7 +872,6 @@
           -ms-transition: all 0.5s ease;
           -o-transition: all 0.5s ease;
           transition: all 0.5s ease;
-          background-color: #F5F5F5;
           left: 0;
           top: 0;
           width: 100%;
@@ -868,7 +910,6 @@
             }
           }
           p {
-            color: #635f5f;
             font-size: 14px;
             line-height: 1.62em;
           }
