--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -678,6 +678,14 @@
     font-weight: normal;
     font-family: 'YMCA';
   }
+
+  .field-ygtc-content-date-between a:after {
+    margin-left: 10px;
+    content: 'o';
+    text-transform: none;
+    font-size: 18px;
+    font-family: 'YMCA';
+  }
 }
 .field-prgf-description {
   article a:hover .inner-wrapper h3:after{
