--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/state/_state.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/state/_state.scss
@@ -13,13 +13,13 @@ textarea:focus,
 .form-control:focus,
 .slick-arrow:focus:before,
 .navbar-toggle:focus {
-  outline: 5px auto $bright-green;
+  //outline: 5px auto $bright-green;
 }
 
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
-  box-shadow: 0px 0px 3px 3px $bright-green;
+  //box-shadow: 0px 0px 3px 3px $bright-green;
   outline: none;
 }
 
