Fix fonts on the new site

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -636,7 +636,7 @@
       }
       a {
         font-weight: bold;
-        font-family: 'Cachet', Helvetica, Arial, sans-serif;
+        font-family: 'Cachet', Verdana, Arial, sans-serif;
       }
     }
   }
