--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/modules/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/modules/_paragraphs.scss
@@ -332,7 +332,7 @@
   }
 
   h2 {
-    font-family: Verdana, Arial, sans-serif;
+    font-family: 'Cachet', Verdana, Arial, sans-serif;
     text-transform: uppercase;
     color: $default-grey;
     margin: 0 0 25px;
