--- a/docroot/modules/patched/entity_embed/templates/entity-embed-container.html.twig
+++ b/docroot/modules/patched/entity_embed/templates/entity-embed-container.html.twig
@@ -6,11 +6,10 @@
  * Available variables:
  * - attributes: HTML attributes for the containing element.
  * - children: The rendered child elements of the container.
- * - url: The (sanitized) URL to link the embedded entity to, if any.
  *
  * @see template_preprocess_entity_embed_container()
  *
  * @ingroup themeable
  */
 #}
-<article{{ attributes }}>{% if url %}<a href='{{ url }}' {{ url_attributes|default('') }}>{{ children }}</a>{% else %}{{ children }}{% endif %}</article>
+<article{{ attributes }}>{{ children }}</article>
