--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_membership.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_membership.scss
@@ -102,7 +102,7 @@
 .button-solid-blue a {
   color: #fff;
   font-size: 24px;
-  font-family: 'Cachet', Verdana, Arial, sans-serif;
+  font-family: $font-family-cachet;
   line-height: 32px;
   padding-right: 50px;
   padding-left: 50px;
