--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/base/_variables.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/base/_variables.scss
@@ -4,3 +4,4 @@ $breakpoint-to-ems: true;
 $base-font-size: 10px;
 
 $top-nav-height: 100px;
+$font-family-cachet: 'Cachet', Verdana, Arial, sans-serif;
