Fix font family for old and new themes

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -5429,7 +5429,7 @@ article .node--view-mode-flexible-content h2 a span {
 
 .list-branch-amenities-wrapper h5 {
   font-size: 15px;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
 }
 
 .paragraph--type--lto {
@@ -5542,7 +5542,7 @@ article .node--view-mode-flexible-content h2 a span {
 }
 body {
   -webkit-font-smoothing: antialiased;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -9178,7 +9178,7 @@ a.sports-icon.floor-hockey {
   height: 51px;
   white-space: nowrap;
   font-weight: normal;
-  font-family: "Cachet", Verdana, Geneva, sans-serif;
+  font-family: "Cachet", Verdana, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.4em;
   -webkit-transition: background-color .2s linear;
@@ -10266,7 +10266,7 @@ a.sports-icon.floor-hockey {
   background: #e5e5e5;
   padding: 10px 0 20px 0;
   color: #333333;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Cachet", Verdana, Arial, sans-serif;
   font-weight: 200;
   line-height: 1.4;
 }
@@ -12523,7 +12523,7 @@ body.node--type-location #groupex-full-form-wrapper #location-select-wrapper {
 }
 .fullcalendar .fc-view-container .fc-view .fc-day-top,
 .fullcalendar .fc-view-container .fc-view .fc-day-number {
-  font-family: Verdana,Arial,sans-serif;
+  font-family: "Cachet", Verdana, Arial, sans-serif;
   font-size: 22px;
   letter-spacing: -0.6px;
   text-align: left;
@@ -12818,7 +12818,7 @@ body.node--type-location #groupex-full-form-wrapper #location-select-wrapper {
   font-size: 18px;
   text-transform: none;
   font-weight: normal;
-  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-family: "Cachet", Verdana, Arial, sans-serif;
   margin-bottom: 30px;
   line-height: 24px;
 }
@@ -14132,7 +14132,7 @@ body.modal-open {
   padding: 35px 0 10px;
   overflow: hidden;
   position: relative;
-  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-family: "Cachet", Verdana, Arial, sans-serif;
 }
 @media screen and (max-width: 767px) {
   .mindbody-search-results-header {
@@ -14305,13 +14305,13 @@ body.modal-open {
 }
 .mindbody-search-results-content .day .group-by-date .name {
   color: #1d1d1b;
-  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-family: "Cachet", Verdana, Arial, sans-serif;
   font-size: 15px;
   font-weight: bold;
 }
 .mindbody-search-results-content .day .group-by-date .available {
   color: #00aa95;
-  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-family: "Cachet", Verdana, Arial, sans-serif;
   font-size: 14px;
   margin: 5px 0 10px;
 }
@@ -14337,7 +14337,7 @@ body.modal-open {
   background-color: #fafafa;
   border-radius: 3px;
   border: 1px solid #e9e9e9;
-  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-family: "Cachet", Verdana, Arial, sans-serif;
   font-size: 14px;
   height: 50px;
   line-height: 50px;
