--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -587,7 +587,7 @@
   background: $extra-grey3;
   padding: 10px 0 20px 0;
   color: $darker-grey;
-  font-family: $font-family-sans-serif;
+  font-family: $font-family-cachet;
   font-weight: 200;
   line-height: 1.4;
   &:before {
