--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_camp_du_nord.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_camp_du_nord.scss
@@ -532,7 +532,7 @@
     }
     .fc-day-top,
     .fc-day-number {
-      font-family: Verdana,Arial,sans-serif;
+      font-family: $font-family-cachet;
       font-size: 22px;
       letter-spacing: -0.6px;
       text-align: left;
@@ -843,7 +843,7 @@
     font-size: 18px;
     text-transform: none;
     font-weight: normal;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-family: $font-family-cachet;
     margin-bottom: 30px;
     line-height: 24px;
     @include breakpoint(0 991px) {
