--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_mindbody.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_mindbody.scss
@@ -623,7 +623,7 @@
   padding: 35px 0 10px;
   overflow: hidden;
   position: relative;
-  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-family: $font-family-cachet;
 
   @media screen and (max-width: 767px) {
     padding: 25px 0 30px;
@@ -797,14 +797,14 @@
 
       .name {
         color: $black2;
-        font-family: Verdana, Arial, Helvetica, sans-serif;
+        font-family: $font-family-cachet;
         font-size: 15px;
         font-weight: bold;
       }
 
       .available {
         color: $green1;
-        font-family: Verdana, Arial, Helvetica, sans-serif;
+        font-family: $font-family-cachet;
         font-size: 14px;
         margin: 5px 0 10px;
       }
@@ -838,7 +838,7 @@
           background-color: $grey6;
           border-radius: 3px;
           border: 1px solid $grey2;
-          font-family: Verdana, Arial, Helvetica, sans-serif;
+          font-family: $font-family-cachet;
           font-size: 14px;
           height: 50px;
           line-height: 50px;
