--- a/docroot/themes/custom/ymca/sass/yfr/_misc.scss
+++ b/docroot/themes/custom/ymca/sass/yfr/_misc.scss
@@ -7,7 +7,7 @@ html, body {
 }
 
 .theme_ymca_2016_fall_retention {
-  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-family: 'Cachet', Verdana, Arial, Helvetica, sans-serif;
 
   .viewport {
     padding-top: 0;
