--- a/docroot/themes/custom/ymca/sass/ysr/_misc.scss
+++ b/docroot/themes/custom/ymca/sass/ysr/_misc.scss
@@ -567,7 +567,7 @@
       }
 
       p {
-        font-family: Verdana, Arial, Helvetica, sans-serif;
+        font-family: 'Cachet', Verdana, Arial, Helvetica, sans-serif;
       }
 
       .access-question {
@@ -1118,7 +1118,7 @@
 
         &.number {
           @include rem(font-size, 11px);
-          font-family: Verdana, Arial, Helvetica, sans-serif;
+          font-family: 'Cachet', Verdana, Arial, Helvetica, sans-serif;
           padding-left: 0;
 
           @include breakpoint($mobile-landscape) {
