--- a/docroot/themes/custom/ymca/sass/ysr_2017/_blocks.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_blocks.scss
@@ -284,7 +284,7 @@
     }
 
     .description {
-      font-family: Verdana, Arial, Helvetica, sans-serif;
+      font-family: 'Cachet', Verdana, Arial, Helvetica, sans-serif;
       color: $grey7;
       text-transform: initial;
       font-weight: normal;
