--- a/docroot/themes/custom/ymca/sass/ysr_2017_summer/_misc.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017_summer/_misc.scss
@@ -7,7 +7,7 @@ html, body {
 }
 
 .theme-ymca--2017-compain {
-  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-family: 'Cachet', Verdana, Arial, Helvetica, sans-serif;
   color: $grey7;
 
   &.toolbar-vertical {
