Add carat icon for links globally

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -682,7 +682,7 @@
     font-family: 'YMCA';
   }
 
-  .field-ygtc-content-date-between a:after {
+  a:after {
     margin-left: 10px;
     content: 'o';
     text-transform: none;
