--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -10364,7 +10364,7 @@ a.sports-icon.floor-hockey {
   font-weight: normal;
   font-family: 'YMCA';
 }
-.paragraph--type--secondary-description-sidebar .field-ygtc-content-date-between a:after {
+.paragraph--type--secondary-description-sidebar a:after {
   margin-left: 10px;
   content: 'o';
   text-transform: none;
