Fix icon on frontpage in right column block

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -10320,9 +10320,6 @@ a.sports-icon.floor-hockey {
   font-weight: bold;
   font-family: "Cachet", Verdana, Arial, sans-serif;
 }
-.paragraph--type--secondary-description-sidebar ul li a:after {
-  content: none !important;
-}
 .paragraph--type--secondary-description-sidebar h3 {
   margin-top: 0;
 }
@@ -10367,12 +10364,16 @@ a.sports-icon.floor-hockey {
   font-weight: normal;
   font-family: 'YMCA';
 }
-.paragraph--type--secondary-description-sidebar .field-prgf-right-column-block:not(.path-frontpage) a:after {
+.paragraph--type--secondary-description-sidebar .field-prgf-right-column-block a:after {
   margin-left: 10px;
   content: 'o';
   text-transform: none;
   font-size: 18px;
   font-family: 'YMCA';
+}
+
+.path-frontpage .field-prgf-right-column-block a:after {
+  content: none;
 }
 
 .field-prgf-description article a:hover .inner-wrapper h3:after {
