Fix font for left sidebar

--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -4655,7 +4655,7 @@ a.wrapper:hover {
   padding-left: 25px;
   color: #428bca;
   font-size: 13px;
-  font-family: 'Arial';
+  font-family: 'Cachet', Verdana, Arial, sans-serif;
 }
 
 .lt-ie8 .page-footer {
